# home

./: .gitignore  README.md  start.sh
server/: .pylintrc  Dockerfile  build.sh  collectstatic.sh  migrate.sh  project.json  pyproject.toml  requirements.txt  vercel.json
server/achievements/: admin.py  models.py  serializers.py  urls.py  views.py
server/achievements/migrations/: 0001_initial.py  0002_certification_credential_id_certification_identifier.py  0003_certification_certification_file.py  0004_alter_certification_image.py  0005_achievement_is_active_certification_is_active.py
server/backend/: settings.py  urls.py  utils.py
server/blog/: admin.py  models.py  serializers.py  urls.py  views.py
server/blog/migrations/: 0001_initial.py  0002_blogpost_is_active.py  0003_blogpost_image_blogpost_role_and_more.py  0004_alter_blogpost_created_at.py  0005_alter_blogpost_created_at.py  0006_blogpost_slug.py
server/core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/core/migrations/: 0001_initial.py  0002_remove_globalconfiguration_resume_url_and_more.py  0003_adminexternalservice.py  0004_globalconfiguration_portfolio_github_url.py
server/core/templatetags/: admin_external_services_tags.py
server/projects/: admin.py  models.py  serializers.py  urls.py  views.py
server/projects/migrations/: 0001_initial.py  0002_project_description_project_image_and_more.py  0003_alter_project_image.py  0004_project_featured_project_link_project_priority_and_more.py  0005_project_is_active.py
server/templates/admin/: index.html
(+57 files in other folders)
