[project]
name = "server"
version = "0.1.0"
description = "Backend API for personal portfolio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.10",
    "dj-database-url>=2.1.0",
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "django-otp>=1.6.1",
    "django-storages>=1.14.6",
    "django-tinymce>=4.1.0",
    "djangorestframework>=3.16.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.9",
    "python-decouple>=3.8",
    "qrcode>=8.2",
]

[dependency-groups]
dev = []